add page register, login, about

--- a/index.html
+++ b/index.html
@@ -249,7 +249,11 @@
 				<!-- end of item -->
 			</div>
 		</div>
-
+		<footer class="footer">
+			<div class="container">
+				<p class="text-muted text-center">Copyright &copy 2015. Developed when Ramadhan 1436 H in Bandung with Love.</p>
+			</div>
+		</footer>
 
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/bootstrap.min.js"></script>
