--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="Open Data, Digital Data">
 	<meta name="author" content="onnayokheng, monterico">
 
-	<title>Submit Data | Digita - Open Digital Data</title>
+	<title>Register | Digita - Open Digital Data</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -40,63 +40,42 @@
 						<li><a href="/about">About</a></li>
 						<li><a href="/contact">Contact</a></li>
 					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="/profile">Hola, <strong>John Doe</strong>!</a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="/profile">Profile</a></li>
-								<li><a href="/submit">Submit Data</a></li>
-								<li role="separator" class="divider"></li>
-								<li><a href="/logout">Logout</a></li>
-							</ul>
-						</li>
-					</ul>
 				</div>
 			</div>
 		</nav>
 
 		<div class="container">
 			<div class="starter-template">
-				<h1>SUBMIT DATA</h1>
+				<h1>Register</h1>
 			</div>
 		</div>
 
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
-					<div class="thumbnail">
-						<img src="http://placehold.it/350x300" class="img-responsive" alt="">
-					</div>
-				</div>
-				<div class="col-md-8">
+				<div class="col-md-4 col-md-offset-4">
 					<form>
 						<div class="form-group">
-							<label for="name">Name</label>
-							<input type="text" class="form-control" id="name" placeholder="Name">
+							<label for="name">Nama</label>
+							<input type="text" class="form-control" id="name">
 						</div>
 						<div class="form-group">
 							<label for="email">Email</label>
-							<input type="text" class="form-control" id="email" placeholder="Email">
+							<input type="text" class="form-control" id="email">
 						</div>
 						<div class="form-group">
-							<label for="website">Website</label>
-							<input type="text" class="form-control" id="website" placeholder="Website">
+							<label for="password">Password</label>
+							<input type="password" class="form-control" id="password">
 						</div>
 						<div class="form-group">
-							<label for="Alamat">Alamat</label>
-							<input type="text" class="form-control" id="Alamat" placeholder="Alamat">
+							<label for="password2">Konfirmasi Password</label>
+							<input type="password" class="form-control" id="password2">
 						</div>
-						<div class="form-group">
-							<label for="jabatan">Jabatan</label>
-							<input type="text" class="form-control" id="jabatan" placeholder="Jabatan">
-						</div>
-						<button type="submit" class="btn btn-primary">Submit</button>
+						<button type="submit" class="btn btn-primary btn-block">Daftar</button><br>
+						<p>Sudah punya akun? Login <a href="/login">di sini</a>.</p>
 					</form>
 				</div>
 			</div>
 		</div>
-
 		<footer class="footer">
 			<div class="container">
 				<p class="text-muted text-center">Copyright &copy 2015. Developed when Ramadhan 1436 H in Bandung with Love.</p>
